# Drowsiness-Detector-Project

./: .gitignore  Pitch Ideas.md  README.md  gitignore_sample.txt  group_agreements.md  project_planning.md  report.csv  requirements.txt  software_requirements.md
.github/workflows/: python-app.yml  python_test.yaml
facedetection/: .gitignore  README.md  UN_reports.csv  application.py  guiHome.ui  guiIntro.ui  guiLogin.ui  mainWindow.ui  pyproject.toml  report.csv  reports.csv  save_reprot.py  send_emails.py
facedetection/facedetection/: drowsiness.py  face_detection.py  save_reprot.py  send-emails.py  send_emails.py
facedetection/facedetection/for complet/: drowsiness.py  face_detection.py  gui.py
facedetection/facedetection/gui/: gui.py  guiReport.ui  guiSignup.ui  guiTwo.py  mainWindow.ui  videoWindow.ui
facedetection/images/: img.qrc
facedetection/tests/: test_drowsnes_detection.py  test_email.py  test_face_detect.py  test_facedetection.py  test_reprot.py
tests/: test_drowsnes_detection.py  test_email.py  test_face_detect.py  test_facedetection.py  test_reprot.py
