[tool.poetry]
name = "facedetection"
version = "0.1.0"
description = ""
authors = ["hayabalasmeh <hmbalasmeh@yahoo.com>"]

[tool.poetry.dependencies]
python = "^3.9"
opencv-contrib-python = "^4.5.3"
scikit-image = "^0.18.2"
dlib = "^19.22.1"
face-recognition = "^1.3.0"
imutils = "^0.5.4"
playsound = "^1.3.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
